# VideoDroneProject

VDGroundStationApp/: TouchWidget.pro  main.cpp  touchwidget.cpp  touchwidget.h  touchwidget.ui
VideoDrone/: CMakeLists.txt
VideoDrone/include/camera/: VideoCamera.h
VideoDrone/include/control/: PID.h  aclmccontroller.h
VideoDrone/include/globals/: global.h  globalstruct.h
VideoDrone/include/imu/: BerryGPSIMU.h  sensorfnc.h
VideoDrone/lib/: README
VideoDrone/src/: main.cpp
VideoDrone/src/camera/: PracticalSocket.cpp  VideoCamera.cpp
VideoDrone/src/control/: Controller.cpp  PID.cpp  aclmccontroller.cpp
VideoDrone/src/imu/: BerryGPSIMU.cpp  sensor.c  sensorfnc.cpp
VideoDrone/test/VideoStreamFiles/: CMakeLists.txt  VideoClient.cpp  VideoServer.cpp
